# human-dynamics-estimation

./: CMakeLists.txt
app/: CMakeLists.txt
app/conf/: HumanDynamicsEstimation.xml  HumanDynamicsEstimation_RobotFTShoesSetup.xml  HumanDynamicsEstimation_RobotForcePlatesSetup.xml  HumanDynamicsEstimation_noRobotFTShoesSetup.xml  HumanDynamicsEstimation_noRobotForcePlatesSetup.xml  humanstateprovider.xml  humanstateprovider_2.xml  humanstateprovider_48Model.xml  humanstateprovider_NoAllLinks.xml  humanstateprovider_OneLinks.xml  new_ik_link.xml  new_ik_link_State.xml  newhde.xml  soloHuman_2.xml  xsenshumanstateprovider.xml
app/rviz/: Human.launch
app/urdfs/: Claudia48DoF_PILimit.urdf  Claudia66DoF_10PILimit.urdf
conf/: CMakeLists.txt
conf/ros/rviz/: iCubRviz.rviz
conf/xml/: Human.xml  HumanStateProveder_2.xml  HumanStateProvider.xml  HumanStateProvider_running.xml  HumanStateProvider_second.xml  Human_MAPest.xml  RobotStateProvider.xml  RobotStateProvider_Atlas.xml  RobotStateProvider_Baxter.xml  RobotStateProvider_Human.xml  RobotStateProvider_Nao.xml  RobotStateProvider_Walkman.xml  RobotStateProvider_iCub.xml  WholeBodyRetargeting.xml  hands-pHRI.xml  pHRI.xml
devices/: CMakeLists.txt
devices/HumanDataCollector/: HumanDataCollector.cpp
devices/HumanDynamicsEstimator/: CMakeLists.txt  HumanDynamicsEstimator.cpp  HumanDynamicsEstimator.h
devices/HumanStateProvider/: CMakeLists.txt  HumanIKWorkerPool.cpp  HumanIKWorkerPool.h  HumanStateProvider.cpp  HumanStateProvider.h  IKWorkerPool.cpp  IKWorkerPool.h
devices/HumanStateVisualizer/: CMakeLists.txt  HumanStateVisualizer.cpp  HumanStateVisualizer.h
devices/RobotPositionController/: RobotPositionController.h
devices/Utilities/: CMakeLists.txt
devices/XsensHumanStateProvider/: XsensHumanStateProvider.cpp
human-dynamics-estimator/: CMakeLists.txt
human-dynamics-estimator/include/: HumanDynamicsEstimator.h
human-dynamics-estimator/src/: HumanDynamicsEstimator.cpp
human-robot-pose/: CMakeLists.txt
human-robot-pose/conf/: human-robot-pose.ini
human-robot-pose/include/: HumanRobotPose.h
human-robot-pose/src/: HumanRobotPose.cpp  main.cpp
human-viz-bridge/misc/: HDEViz.rviz  displayHumanBasePose.launch
human-viz-bridge/src/: HumanEffortBridge.cpp
interfaces/IHumanDynamics/: IHumanDynamics.h
interfaces/IHumanState/: IHumanState.h
modules/HumanStateVisualizer/src/: main.cpp
publishers/HumanStatePublisher/: HumanStatePublisher.cpp
wrappers/HumanStateWrapper/: HumanStateWrapper.cpp
(+4 files in other folders)
